Prueba 2 para ver si GitHub cambiara las cosas en mi pagina de Firebase

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
     </style>
   </head>
   <body>
-    <h1>Esta es mi página usando Firebase Hosting, y actualizando con GitHub</h1>
+    <h1>Esta es mi página usando Firebase Hosting, y actualizando con GitHub. (Intento 2)</h1>
     <div id="message">
       <h2>Welcome</h2>
       <h1>Firebase Hosting Setup Complete</h1>
